# flir_ptu

./: .gitignore  README.md  stack.xml
flir_ptu_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
flir_ptu_description/meshes/: flir-ptu-camera-mount.stl  flir-ptu-pan-motor-collision.stl  flir-ptu-pan-motor.stl  flir-ptu-tilt-motor-collision.stl  flir-ptu-tilt-motor.stl
flir_ptu_description/urdf/: d46.urdf.xacro  d48.urdf.xacro  example.urdf.xacro  example_d48.urdf.xacro  ptu.urdf
flir_ptu_description/urdf/meshes/: d48_ptu_base.STL  d48_ptu_body.STL  d48_ptu_mount.STL  short_top_plate.STL
flir_ptu_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
flir_ptu_driver/debian/: udev
flir_ptu_driver/include/flir_ptu_driver/: driver.h  tcp_client.h
flir_ptu_driver/launch/: d46ptu.launch  d48ptu.launch  ptu.launch  ptu_simulation.launch
flir_ptu_driver/scripts/: cmd_angles  ptu_action_test.py  ptu_simulation_node  ptucom.py
flir_ptu_driver/src/: driver.cpp  node.cpp  ptu46_driver.cc  ptu46_node.cc  tcp_client.cpp
flir_ptu_msgs/: CMakeLists.txt  package.xml
flir_ptu_msgs/action/: PtuGoto.action  PtuSetVel.action
flir_ptu_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
flir_ptu_viz/launch/: view_d48_model.launch  view_model.launch  view_ptu.launch
flir_ptu_viz/rviz/: urdf.rviz
ptu46/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  ptu46_actions.launch  ptu_action_server.py
ptu46/include/ptu46/: ptu46_driver.h
ptu46/launch/: ptu46_actions.launch
ptu46/src/: ptu46_driver.cc  ptu46_node.cc
ptu_control/: CMakeLists.txt  calib_data.mat  calibration.launch  mainpage.dox  manifest.xml  package.xml  pantilt_selftest.py  ptu_action_test.py  ptu_angle.py  ptu_node.py  ptu_tracker.py  visual_calibration.py  visualize_angle.py
ptu_control/action/: PtuReset.action
ptu_control/scripts/: ptu_action_test.py  ptu_node.py
ptu_control/src/ptu_control/: Calibration.py  geometry.py  ptu_tracker.py
