<?xml version="1.0"?>
<package> 
  <name>flir_ptu_description</name>
  <version>0.1.4</version>
  <description>URDF description the FLIR PTUs, currently the D46.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <url>http://wiki.ros.org/flir_ptu_driver</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
