<?xml version="1.0"?>
<package>
  <name>flir_ptu_driver</name>
  <version>0.2.1</version>
  <description>Driver for the FLIR pan/tilt units.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <url type="website">http://wiki.ros.org/flir_ptu_driver</url>
  <url type="repository">https://github.com/ros-drivers/flir_ptu.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/flir_ptu/issues</url>

  <!-- Authors -->
  <author email="erik@cse.wustl.edu">Erik Karulf</author>
  <author email="davidlu@wustl.edu">David V. Lu</author>
  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>flir_ptu_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>velocity_controllers</run_depend>

</package>
