<?xml version="1.0"?>
<package>
  <name>flir_ptu_viz</name>
  <version>0.2.1</version>
  <description>Launchfiles and rviz configs to assist with visualizing the FLIR PTUs.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <url>http://wiki.ros.org/flir_ptu_driver</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>flir_ptu_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
