<?xml version="1.0"?>
<package>
  <name>ptu46</name>
  <version>0.0.0</version>
  <description>Driver for the Directed Perception ptu46 pan/tilt driver, forked from player</description>

<!-- Authors -->
  <maintainer email="erik@cse.wustl.edu">Erik Karulf</maintainer> 
  <maintainer email="davidlu@wustl.edu">David V. Lu</maintainer>

  <!-- Catkinised by -->
  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>ptu_control</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>ptu_control</run_depend>
  <run_depend>roscpp</run_depend>

</package>