<?xml version="1.0"?>
<package>
  <name>ptu_control</name>
  <version>0.0.0</version>
  <description>Provides an actionlib interface for PTUs which listen for JointState messages (such as PTU46)</description>

  <!-- Author -->
  <maintainer email="lazewatd@engr.orst.edu">Dan Lazewatsky</maintainer>
  <!-- Catkinised by -->
  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <license>BDS</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <cpp cflags="-I${prefix}/msg/cpp -I${prefix}/srv/cpp -I${prefix}/include"/>
  </export>
</package>